<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/detail_nav_bar_height"
    app:layout_behavior="@string/view_pager_bottom_sheet_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_nav_bar_height"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_overview_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_primary_borderless"
                android:gravity="center"
                android:onClick="onBtnClickIngredients"
                android:text="@string/detail_ingredients"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/detail_overview_button_text" />

            <TextView
                android:id="@+id/tv_overview_steps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ripple_primary_borderless"
                android:gravity="center"
                android:onClick="onBtnClickSteps"
                android:text="@string/detail_steps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/detail_overview_button_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_overview_back"
                android:layout_width="@dimen/detail_nav_bar_height"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@drawable/ripple_primary_borderless"
                android:clickable="true"
                android:contentDescription="@string/detail_desc_back"
                android:focusable="true"
                android:onClick="onBtnClickBack"
                android:scaleType="center"
                android:src="@drawable/baseline_chevron_left_white_24"
                android:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick="onBtnClickOverview"
                android:text="@string/detail_overview"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/detail_overview_button_text" />

            <ImageView
                android:id="@+id/iv_overview_forward"
                android:layout_width="@dimen/detail_nav_bar_height"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@drawable/ripple_primary_borderless"
                android:clickable="true"
                android:contentDescription="@string/detail_desc_forward"
                android:focusable="true"
                android:onClick="onBtnClickForward"
                android:scaleType="center"
                android:src="@drawable/baseline_chevron_right_white_24"
                android:tint="@color/colorAccent" />
        </LinearLayout>
    </FrameLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />
</LinearLayout>
